ndp-ep/archive/pop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pop-ingress
  namespace: pop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /pop(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: pop-api-service
              port:
                number: 8003
